--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@uploadthing/react": "^7.3.0",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -27,7 +28,7 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.474.0",
     "motion": "^12.6.2",
-    "next": "15.1.6",
+    "next": "15.2.3",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.1.3",
     "react": "^19.1.0",
@@ -36,7 +37,8 @@
     "shadcn": "^2.3.0",
     "svix": "^1.62.0",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^7.6.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
