--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.12.12",
     "@clerk/themes": "^2.2.26",
+    "@google/genai": "^0.8.0",
     "@google/generative-ai": "^0.21.0",
     "@prisma/client": "6.3.1",
     "@radix-ui/react-dialog": "^1.1.6",
