--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "clsx": "^2.1.1",
     "dagre": "^0.8.5",
     "framer-motion": "^12.6.2",
+    "franc": "^6.2.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.474.0",
     "motion": "^12.6.2",
     "next": "15.2.3",
     "next-themes": "^0.4.6",
+    "pdf-parse-debugging-disabled": "^1.1.1",
     "radix-ui": "^1.1.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
