--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "radix-ui": "^1.1.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-pdf": "^9.2.1",
     "reactflow": "^11.11.4",
     "shadcn": "^2.3.0",
     "svix": "^1.62.0",
