--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@radix-ui/react-slider": "^1.2.4",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@uploadthing/react": "^7.3.0",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
@@ -38,7 +40,6 @@
     "radix-ui": "^1.1.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-pdf": "^9.2.1",
     "reactflow": "^11.11.4",
     "shadcn": "^2.3.0",
     "svix": "^1.62.0",
