--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@uploadthing/react": "^7.3.0",
     "axios": "^1.8.4",
+    "canvas": "^3.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dagre": "^0.8.5",
@@ -36,12 +37,14 @@
     "motion": "^12.6.2",
     "next": "15.2.3",
     "next-themes": "^0.4.6",
+    "pdf-parse": "^1.1.1",
     "pdf-parse-debugging-disabled": "^1.1.1",
     "radix-ui": "^1.1.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "reactflow": "^11.11.4",
     "shadcn": "^2.3.0",
+    "sharp": "^0.34.1",
     "svix": "^1.62.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
