--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@uploadthing/react": "^7.3.0",
     "axios": "^1.8.4",
-    "canvas": "^3.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dagre": "^0.8.5",
@@ -59,6 +58,7 @@
     "@types/react-dom": "^19.0.4",
     "eslint": "^9.23.0",
     "eslint-config-next": "15.1.6",
+    "null-loader": "^4.0.1",
     "postcss": "^8.5.3",
     "prisma": "^6.5.0",
     "tailwindcss": "^3.4.17",
