--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,6 +37,8 @@
     ".next/types/**/*.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "src/utils/utils.ts",
+    "**/*.ignored.ts"
   ]
 }
